// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBody should render With all props 1`] = `
<span>
  <AlertLink
    href="#"
  >
    link text
  </AlertLink>
  <strong>
    some title
  </strong>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "some message",
      }
    }
  />
  <span>
    a Child
  </span>
</span>
`;

exports[`AlertBody should render with childrens 1`] = `
<span>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <span>
    a Child
  </span>
</span>
`;

exports[`AlertBody should render with link 1`] = `
<span>
  <AlertLink
    href="#"
  >
    link text
  </AlertLink>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
</span>
`;

exports[`AlertBody should render with title and message 1`] = `
<span>
  <strong>
    some title
  </strong>
  <span
    dangerouslySetInnerHTML={
      Object {
        "__html": "some message",
      }
    }
  />
</span>
`;
